--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
 <!-- 88 MAIN LUXE v13.1 (v12 기능 유지) -->
 <!-- ===== SEO 기본 세팅 ===== -->
-<title>88st.cloud | 스포츠 배당 분석기 · 마진/EV · 카지노 전략 · 미니게임 · 슬롯 분석기 · 먹튀검증 안전놀이터</title>
-<meta content="88 — 스포츠 배당/마진(EV 포함) 분석기, 카지노 전략 분석기, 미니게임 분석기, 슬롯(RTP·변동성) 분석기를 한 곳에서. 인증/보증 정보와 함께 빠르게 확인하세요." name="description">
-<meta name="keywords" content="스포츠 분석기, 스포츠 배당 분석기, 배당 마진 계산기, 오버라운드, EV 계산기, 공정배당, 보증사이트, 인증사이트, 먹튀검증, 카지노 전략 분석기, 미니게임 분석기, 슬롯 분석기, 슬롯 RTP, 슬롯 변동성"/>
+<title>88st.cloud | 스포츠 배당 분석기 · 미니게임 · 카지노 전략 · 슬롯 환수율(RTP) 분석기 · 마진/EV · 먹튀검증 안전놀이터</title>
+<meta content="88 — 스포츠 배당/마진(EV 포함) 분석기, 미니게임 분석기, 카지노 전략 분석기, 슬롯(RTP·변동성) 분석기를 한 곳에서. 인증/보증 정보와 함께 빠르게 확인하세요." name="description">
+<meta name="keywords" content="스포츠 분석기, 스포츠 배당 분석기, 배당 마진 계산기, 오버라운드, EV 계산기, 공정배당, 보증사이트, 인증사이트, 먹튀검증, 카지노 전략 분석기, 미니게임 분석기, 슬롯 환수율(RTP) 분석기, 슬롯 분석기, 슬롯 RTP, 슬롯 변동성"/>
 <link href="https://88st.cloud/" rel="canonical"/>
 <meta content="index,follow" name="robots"/>
 <!-- SNS 공유 -->
 <meta content="website" property="og:type"/>
 <meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
-<meta content="88 | 스포츠 배당·마진/EV · 카지노 전략 · 미니게임 · 슬롯 분석기" property="og:title"/>
+<meta content="88 | 스포츠 배당·마진/EV · 카지노 전략 · 미니게임 · 슬롯 환수율(RTP) 분석기" property="og:title"/>
 <meta content="무료 분석기(마진/EV/확률) + 슬롯 RTP/변동성 분석 + 인증 놀이터 안내" property="og:description"/>
 <meta content="https://88st.cloud/" property="og:url"/>
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
@@ -1774,13 +1774,13 @@ const INSIGHTS_BY_SPORT = {
   ]
 }
 </script>
-<link href="assets/mobile-polish.css?v=VIP4_20260213_09" rel="stylesheet"/>
-<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_09"></script>
-<link href="/assets/88st-theme.css?v=VIP4_20260213_09" rel="stylesheet"/>
-<link href="/assets/88st-tool-history.css?v=VIP4_20260213_09" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_09"></script>
-</meta><link href="/assets/88st-shell.css?v=VIP4_20260213_09" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_09"></script>
+<link href="assets/mobile-polish.css?v=VIP4_20260213_13" rel="stylesheet"/>
+<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_13"></script>
+<link href="/assets/88st-theme.css?v=VIP4_20260213_13" rel="stylesheet"/>
+<link href="/assets/88st-tool-history.css?v=VIP4_20260213_13" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_13"></script>
+</meta><link href="/assets/88st-shell.css?v=VIP4_20260213_13" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_13"></script>
 </head>
 <body>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
@@ -1803,6 +1803,18 @@ const INSIGHTS_BY_SPORT = {
 </svg>
 </span>
 <span class="label">스포츠 분석기 이동<span class="sub"> 중·고급·핸디·언더·오버·EV</span></span>
+</a>
+
+<a class="analyze-btn secondary" data-cta="go_minigame_analyzer" href="/tool-minigame/">
+  <span aria-hidden="true" class="icon">
+    <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M12 3v18"/>
+      <path d="M3 12h18"/>
+      <path d="M7 7l10 10"/>
+      <path d="M17 7L7 17"/>
+    </svg>
+  </span>
+  <span class="label">미니게임 분석기 이동<span class="sub">동행 파워볼·파워볼+·키노사다리</span></span>
 </a>
 
 <a class="analyze-btn secondary" data-cta="go_casino_strategy" href="/tool-casino/">
@@ -1829,19 +1841,7 @@ const INSIGHTS_BY_SPORT = {
       <path d="M8 15h8"/>
     </svg>
   </span>
-  <span class="label">슬롯 분석기<span class="sub">RTP·변동성·세션 비용·뱅크롤</span></span>
-</a>
-
-<a class="analyze-btn secondary" data-cta="go_minigame_analyzer" href="/tool-minigame/">
-  <span aria-hidden="true" class="icon">
-    <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M12 3v18"/>
-      <path d="M3 12h18"/>
-      <path d="M7 7l10 10"/>
-      <path d="M17 7L7 17"/>
-    </svg>
-  </span>
-  <span class="label">미니게임 분석기 이동<span class="sub">동행 파워볼·파워볼+·키노사다리</span></span>
+  <span class="label">슬롯 환수율(RTP) 분석기<span class="sub">RTP·변동성·세션 비용·뱅크롤</span></span>
 </a>
 
 <a class="analyze-btn secondary" data-cta="go_verified_vendors" href="#vendors-verified">
@@ -1879,7 +1879,26 @@ const INSIGHTS_BY_SPORT = {
     <div class="why-cta"><a class="insight-btn primary" data-cta="why_to_analysis" href="/analysis/">스포츠 분석기 열기 <span aria-hidden="true">→</span></a></div>
   </div>
 
-  <div class="why-card" aria-label="카지노 전략 분석기">
+<div class="why-card" aria-label="미니게임 분석기">
+    <div class="why-kicker">미니게임 분석기</div>
+    <div class="why-head"><b>최근 결과를 한 번에 정리</b>해서 ‘흐름/편향’을 빠르게 확인합니다.</div>
+    <ul class="why-list">
+      <li><b>최근 N회</b> 입력/저장 → 홀·짝/언더·오버 등 <b>빈도·확률</b> 자동 집계</li>
+      <li><b>연속·전환</b> 지표로 단순 감(느낌) 대신 <b>숫자 기반 체크</b></li>
+      <li><b>히스토리</b>로 오늘 데이터만 깔끔하게 관리 (초기화/저장/불러오기)</li>
+    </ul>
+
+    <div class="why-metrics">
+      <div class="why-metric"><div class="t">예시</div><div class="v">최근 30회</div><div class="s">입력/저장</div></div>
+      <div class="why-metric"><div class="t">자동 집계</div><div class="v">빈도·확률</div><div class="s">홀/짝 · U/O</div></div>
+      <div class="why-metric"><div class="t">체크</div><div class="v">연속·전환</div><div class="s">흐름 확인</div></div>
+    </div>
+
+    <div class="why-note">결과를 “보기 좋게 정리”하는 도구입니다. 과몰입을 피하고, 기록은 짧게 가져가세요.</div>
+    <div class="why-cta"><a class="insight-btn primary" data-cta="why_to_minigame" href="/tool-minigame/">미니게임 분석기 열기 <span aria-hidden="true">→</span></a></div>
+  </div>
+
+<div class="why-card" aria-label="카지노 전략 분석기">
     <div class="why-kicker">카지노 전략 분석기</div>
     <div class="why-head"><b>턴이 빠른 게임</b>에서도 ‘다음 베팅’을 실수 없이 정리합니다.</div>
     <ul class="why-list">
@@ -1899,30 +1918,12 @@ const INSIGHTS_BY_SPORT = {
     <div class="why-cta"><a class="insight-btn primary" data-cta="why_to_casino" href="/tool-casino/">카지노 전략 분석기 열기 <span aria-hidden="true">→</span></a></div>
   </div>
 
-  <div class="why-card" aria-label="미니게임 분석기">
-    <div class="why-kicker">미니게임 분석기</div>
-    <div class="why-head"><b>최근 결과를 한 번에 정리</b>해서 ‘흐름/편향’을 빠르게 확인합니다.</div>
-    <ul class="why-list">
-      <li><b>최근 N회</b> 입력/저장 → 홀·짝/언더·오버 등 <b>빈도·확률</b> 자동 집계</li>
-      <li><b>연속·전환</b> 지표로 단순 감(느낌) 대신 <b>숫자 기반 체크</b></li>
-      <li><b>히스토리</b>로 오늘 데이터만 깔끔하게 관리 (초기화/저장/불러오기)</li>
-    </ul>
-
-    <div class="why-metrics">
-      <div class="why-metric"><div class="t">예시</div><div class="v">최근 30회</div><div class="s">입력/저장</div></div>
-      <div class="why-metric"><div class="t">자동 집계</div><div class="v">빈도·확률</div><div class="s">홀/짝 · U/O</div></div>
-      <div class="why-metric"><div class="t">체크</div><div class="v">연속·전환</div><div class="s">흐름 확인</div></div>
-    </div>
-
-    <div class="why-note">결과를 “보기 좋게 정리”하는 도구입니다. 과몰입을 피하고, 기록은 짧게 가져가세요.</div>
-    <div class="why-cta"><a class="insight-btn primary" data-cta="why_to_minigame" href="/tool-minigame/">미니게임 분석기 열기 <span aria-hidden="true">→</span></a></div>
-  </div>
-
-  <div class="why-card" aria-label="슬롯 분석기">
-    <div class="why-kicker">슬롯 분석기</div>
+<div class="why-card" aria-label="슬롯 환수율(RTP) 분석기">
+    <div class="why-kicker">슬롯 환수율(RTP) 분석기</div>
     <div class="why-head"><b>RTP·변동성</b>을 숫자로 정리해, 세션 비용과 리스크를 빠르게 관리합니다.</div>
     <ul class="why-list">
       <li><b>총 베팅/기대 손실</b>을 즉시 계산해 “세션 비용”을 투명하게 확인</li>
+      <li><b>RTP는 운영사/버전</b>에 따라 다를 수 있어, <b>게임 내 정보(i)</b>·페이테이블 기준으로 입력</li>
       <li><b>변동성 기준 권장 뱅크롤</b>과 <b>손절선</b>을 제안해 과몰입 방지</li>
       <li><b>최근 저장/공유</b>로 게임별 설정을 빠르게 복원 (RTP 버전 메모 가능)</li>
     </ul>
@@ -1934,8 +1935,10 @@ const INSIGHTS_BY_SPORT = {
     </div>
 
     <div class="why-note">이 도구는 ‘예측’이 아니라 <b>세션/자금관리</b>를 위한 참고용 분석기입니다.</div>
-    <div class="why-cta"><a class="insight-btn primary" data-cta="why_to_slot" href="/tool-slot/">슬롯 분석기 열기 <span aria-hidden="true">→</span></a></div>
+    <div class="why-cta"><a class="insight-btn primary" data-cta="why_to_slot" href="/tool-slot/">슬롯 환수율(RTP) 분석기 열기 <span aria-hidden="true">→</span></a></div>
   </div>
+
+
 
 
 </div>
@@ -2011,7 +2014,7 @@ const INSIGHTS_BY_SPORT = {
 <a href="/landing-d/">배당 흐름 분석</a>
 <a data-cta="seo_casino" href="/casino/">카지노 가이드</a>
 <a data-cta="seo_slot" href="/slot/">슬롯 가이드</a>
-<a data-cta="seo_tool_slot" href="/tool-slot/">슬롯 분석기</a>
+<a data-cta="seo_tool_slot" href="/tool-slot/">슬롯 환수율(RTP) 분석기</a>
 <a data-cta="seo_minigame" href="/minigame/">미니게임 가이드</a>
 <a data-cta="seo_ipl" href="/ipl/">IPL 가이드</a>
 <a data-cta="seo_analysis" href="/analysis/">분석기 메인</a></div>
