--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -17,17 +17,17 @@
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
 
 
-  <link rel="stylesheet" href="/assets/88st-theme.css?v=VIP4_20260213_09"/>
-  <link rel="stylesheet" href="/assets/88st-casino-strategies.css?v=VIP4_20260213_09"/>
-  <link rel="stylesheet" href="/assets/88st-shell.css?v=VIP4_20260213_09"/>
-  <script defer src="/assets/js/88st-shell.js?v=VIP4_20260213_09"></script>
-  <script defer src="/assets/js/88st-casino-strategies.js?v=VIP4_20260213_09"></script>
+  <link rel="stylesheet" href="/assets/88st-theme.css?v=VIP4_20260213_13"/>
+  <link rel="stylesheet" href="/assets/88st-casino-strategies.css?v=VIP4_20260213_13"/>
+  <link rel="stylesheet" href="/assets/88st-shell.css?v=VIP4_20260213_13"/>
+  <script defer src="/assets/js/88st-shell.js?v=VIP4_20260213_13"></script>
+  <script defer src="/assets/js/88st-casino-strategies.js?v=VIP4_20260213_13"></script>
   <!-- GA4 (Casino Stream) -->
   <script>
     window.SITE_CONFIG = window.SITE_CONFIG || {};
     window.SITE_CONFIG.GA4_ID = 'G-22QKSP9VGB';
   </script>
-  <script defer src='/assets/js/88st-analytics.js?v=VIP4_20260213_09'></script>
+  <script defer src='/assets/js/88st-analytics.js?v=VIP4_20260213_13'></script>
 
 
   <script type="application/ld+json">
@@ -123,6 +123,10 @@
               <div class="k">
                 <div class="t">세션 손익(P/L)</div>
                 <div class="v" id="csPL">0</div>
+              </div>
+              <div class="k">
+                <div class="t">잔여 자금</div>
+                <div class="v" id="csBankrollLeft">—</div>
               </div>
               <div class="k">
                 <div class="t">최대 낙폭(MDD)</div>
