--- a/tool-minigame/index.html
+++ b/tool-minigame/index.html
@@ -19,18 +19,18 @@
   <link rel='icon' href='/favicon.ico' type='image/x-icon'/>
   <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon'/>
 
-  <link rel='stylesheet' href='/assets/88st-theme.css?v=VIP4_20260213_09'/>
-  <link rel='stylesheet' href='/assets/88st-minigame-analyzer.css?v=VIP4_20260213_09'/>
-  <link rel='stylesheet' href='/assets/88st-shell.css?v=VIP4_20260213_09'/>
-  <script defer src='/assets/js/88st-shell.js?v=VIP4_20260213_09'></script>
-  <script defer src='/assets/js/88st-minigame-analyzer.js?v=VIP4_20260213_09'></script>
+  <link rel='stylesheet' href='/assets/88st-theme.css?v=VIP4_20260213_13'/>
+  <link rel='stylesheet' href='/assets/88st-minigame-analyzer.css?v=VIP4_20260213_13'/>
+  <link rel='stylesheet' href='/assets/88st-shell.css?v=VIP4_20260213_13'/>
+  <script defer src='/assets/js/88st-shell.js?v=VIP4_20260213_13'></script>
+  <script defer src='/assets/js/88st-minigame-analyzer.js?v=VIP4_20260213_13'></script>
 
   <!-- GA4 (main stream) -->
   <script>
     window.SITE_CONFIG = window.SITE_CONFIG || {};
     window.SITE_CONFIG.GA4_ID = 'G-22QKSP9VGB';
   </script>
-  <script defer src='/assets/js/88st-analytics.js?v=VIP4_20260213_09'></script>
+  <script defer src='/assets/js/88st-analytics.js?v=VIP4_20260213_13'></script>
 
   <script type='application/ld+json'>
   {
@@ -81,6 +81,44 @@
             </select>
           </div>
         </div>
+
+        <section class='mg-quick' aria-label='빠른 입력' style='margin-top:10px;'>
+          <div class='mg-quick-head'>
+            <div class='mg-quick-title'>빠른 입력</div>
+            <div class='mg-quick-sub'>클릭으로 결과를 쌓고, <b>최근 N</b> 기준 확률/인사이트를 바로 업데이트합니다.</div>
+          </div>
+          <div class='mg-quick-chips' id='mgQuickChips'></div>
+          <div class='mg-quick-tools'>
+            <label class='mg-quick-check'>
+              <input type='checkbox' id='mgAutoApply' checked/>
+              입력 즉시 <b>빈도→확률</b> 적용
+            </label>
+            <div class='mg-quick-btns'>
+              <button class='mg-btn' id='mgUndo' type='button'>되돌리기</button>
+              <button class='mg-btn' id='mgBackspace' type='button'>마지막 삭제</button>
+              <button class='mg-btn' id='mgQuickClear' type='button'>빠른입력 초기화</button>
+            </div>
+          </div>
+          <div class='mg-note' style='margin-top:8px;'>
+            • 붙여넣기도 가능: <b>홀 짝 홀</b> / <b>좌 우 좌</b> 처럼 공백·줄바꿈·쉼표로 구분하세요.
+          </div>
+        </section>
+
+        <section class='mg-session' aria-label='세션 관리' style='margin-top:10px;'>
+          <div class='mg-row'>
+            <div class='mg-field' style='flex:1; min-width:220px;'>
+              <label for='mgStopLoss'>오늘 손실 한도(원) <span class='mg-muted'>(0 = 끔)</span></label>
+              <input id='mgStopLoss' inputmode='numeric' placeholder='예: 100000'/>
+            </div>
+            <div class='mg-field' style='flex:1; min-width:220px;'>
+              <label for='mgStreakWarn'>연속 경고(연속 N 이상)</label>
+              <input id='mgStreakWarn' inputmode='numeric' placeholder='예: 7'/>
+            </div>
+          </div>
+          <div class='mg-note' style='margin-top:8px;'>
+            <b>세션 관리</b>는 예측이 아니라 <b>손실 제한/과열 방지</b>를 돕는 장치입니다.
+          </div>
+        </section>
 
         <div class='mg-note' style='margin-top:10px;'>
           <b>배당</b>은 사이트에서 제공되는 값을 그대로 입력하세요. <b>최근 확률(%)</b>은 히스토리로 자동 채워집니다(직접 입력 불가).
@@ -133,12 +171,14 @@
       <section class='mg-card' aria-label='결과'>
         <h2>계산 결과</h2>
 
-        <div class='mg-kpi' aria-label='요약 KPI'>
-          <div class='mg-k'><div class='t'>암시확률 합</div><div class='v' id='mgSumP'>—</div><div class='s'>Σ(1/배당)</div></div>
-          <div class='mg-k'><div class='t'>마진(오버라운드)</div><div class='v' id='mgMargin'>—</div><div class='s'>Σ-1</div></div>
-          <div class='mg-k'><div class='t'>입력 표본</div><div class='v' id='mgN'>—</div><div class='s'>히스토리 건수</div></div>
-          <div class='mg-k'><div class='t'>EV 기준</div><div class='v' id='mgMode'>—</div><div class='s'>최근 결과 기반</div></div>
+        <div class='mg-kpis' aria-label='요약 KPI'>
+          <div class='mg-kpi'><div class='k'>암시확률 합</div><div class='v' id='mgSumP'>—</div><div class='s'>Σ(1/배당)</div></div>
+          <div class='mg-kpi'><div class='k'>마진(오버라운드)</div><div class='v' id='mgMargin'>—</div><div class='s'>Σ-1</div></div>
+          <div class='mg-kpi'><div class='k'>입력 표본</div><div class='v' id='mgN'>—</div><div class='s'>히스토리 건수</div></div>
+          <div class='mg-kpi'><div class='k'>EV 기준</div><div class='v' id='mgMode'>—</div><div class='s'>최근 결과 기반</div></div>
         </div>
+
+        <div id='mgRiskBox' class='mg-risk' aria-label='세션 알림' style='margin-top:10px;'></div>
 
         <div class='mg-divider'></div>
 
@@ -163,6 +203,55 @@
           <h3 style="margin:0 0 10px;">Pro 인사이트</h3>
           <div class='mg-note' style='margin:-2px 0 12px;'>최근 결과(붙여넣기) 기반으로 <b>편향·연속·변동성</b>을 요약합니다. (예측 보장 아님)</div>
           <div id='mgProInsights'></div>
+        </section>
+
+        <div class='mg-divider'></div>
+
+        <section class='mg-picks' aria-label='픽 기록'>
+          <h3 style="margin:0 0 10px;">픽 기록</h3>
+          <div class='mg-note' style='margin:-2px 0 12px;'>분석 결과를 <b>근거 메모</b>와 함께 저장해두면, 다음날/다음 세션에 비교가 쉬워집니다.</div>
+          <div class='mg-row' style='align-items:flex-end;'>
+            <div class='mg-field' style='flex:1.2; min-width:240px;'>
+              <label for='mgPickMemo'>근거 메모(선택)</label>
+              <input id='mgPickMemo' placeholder='예: 최근10 편향↑, 연속 5, 마진 낮음'/>
+            </div>
+            <div class='mg-field' style='flex:.8; min-width:180px;'>
+              <label>&nbsp;</label>
+              <button class='mg-btn primary' id='mgPickSave' type='button'>현재 분석 저장</button>
+            </div>
+          </div>
+          <div id='mgPickList' style='margin-top:10px;'></div>
+        </section>
+
+        <div class='mg-divider'></div>
+
+        <section class='mg-how' aria-label='사용법'>
+          <h3 style="margin:0 0 10px;">사용법 (빠른 시작)</h3>
+          <div class='mg-how-grid'>
+            <div class='mg-how-card'>
+              <div class='mg-how-k'>1) 배당 입력</div>
+              <div class='mg-how-v'>게임/마켓을 선택하고 <b class='mg-em'>배당</b>을 그대로 입력</div>
+              <div class='mg-how-s'>암시확률·마진·공정배당이 자동 계산됩니다.</div>
+            </div>
+            <div class='mg-how-card'>
+              <div class='mg-how-k'>2) 최근 결과 반영</div>
+              <div class='mg-how-v'><b class='mg-em'>붙여넣기</b> 또는 <b class='mg-em'>빠른 입력</b> → 빈도→확률 적용</div>
+              <div class='mg-how-s'>최근 N회 기준 확률로 EV/Pro 인사이트를 업데이트합니다.</div>
+            </div>
+            <div class='mg-how-card'>
+              <div class='mg-how-k'>3) 해석 포인트</div>
+              <div class='mg-how-v'>EV%와 Pro 카드의 <b class='mg-em'>Δ·연속·전환율</b> 확인</div>
+              <div class='mg-how-s'>표본이 적으면 우연일 수 있으니 최근10/전체를 같이 보세요.</div>
+            </div>
+            <div class='mg-how-card'>
+              <div class='mg-how-k'>4) 세션 관리</div>
+              <div class='mg-how-v'>손실 한도/연속 경고로 <b class='mg-em'>과열 방지</b></div>
+              <div class='mg-how-s'>예측이 아니라 “중단 기준”을 숫자로 고정하는 용도입니다.</div>
+            </div>
+          </div>
+          <div class='mg-warnbox' style='margin-top:10px;'>
+            <b>주의</b> 이 도구는 <b>결과 예측</b>이 아니라, 배당/최근 결과를 기반으로 <b>확률·마진·EV를 계산</b>해 세션 의사결정을 돕습니다.
+          </div>
         </section>
 
         <div class='mg-note' style='margin-top:12px;'>
@@ -193,7 +282,7 @@
         var host = document.getElementById('mgGameTabs');
         if((!window.__MG_INIT_DONE) && host && host.children && host.children.length === 0){
           var s = document.createElement('script');
-          s.src = '/assets/js/88st-minigame-analyzer.js?v=VIP4_20260213_09';
+          s.src = '/assets/js/88st-minigame-analyzer.js?v=VIP4_20260213_13';
           s.defer = true;
           document.body.appendChild(s);
         }
