--- a/tool-slot/index.html
+++ b/tool-slot/index.html
@@ -264,13 +264,13 @@ a{ color:inherit; }
   "url": "https://88st.cloud/tool-slot/",
   "description": "RTP·변동성·베팅·스핀수로 총베팅/기대손실/권장 뱅크롤을 계산하는 웹 도구"
 }</script>
-<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_13"></script>
-<link href="/assets/88st-theme.css?v=VIP4_20260213_13" rel="stylesheet"/>
-<link href="/assets/88st-tool-history.css?v=VIP4_20260213_13" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-tool-history.js?v=VIP4_20260213_13"></script>
-<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_13"></script>
-<link href="/assets/88st-shell.css?v=VIP4_20260213_13" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_13"></script>
+<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_14"></script>
+<link href="/assets/88st-theme.css?v=VIP4_20260213_14" rel="stylesheet"/>
+<link href="/assets/88st-tool-history.css?v=VIP4_20260213_14" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-tool-history.js?v=VIP4_20260213_14"></script>
+<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_14"></script>
+<link href="/assets/88st-shell.css?v=VIP4_20260213_14" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_14"></script>
 </head>
 <body>
 <div class="wrap">
@@ -475,7 +475,7 @@ a{ color:inherit; }
 <a data-cta="rel_margin2" href="/tool-margin/">마진 계산기</a>
 <a data-cta="rel_ev" href="/tool-ev/">EV 계산기</a>
 <a data-cta="rel_odds2" href="/tool-odds/">배당↔확률 변환</a>
-<a data-cta="rel_vendors" href="/#vendorTop">보증·인증 업체</a>
+<a data-cta="rel_vendors" href="/cert/">보증·인증 업체</a>
 <a data-cta="rel_bonus" href="/bonus-checklist/">입플 체크리스트</a>
 <a data-cta="rel_slot_guide" href="/slot/">슬롯 가이드</a>
 <a data-cta="rel_landing_a" href="/landing-a/">입플·보너스 안내</a>
