--- a/landing-a/index.html
+++ b/landing-a/index.html
@@ -272,14 +272,14 @@ a{ color:inherit; }
   ]
 }
 </script>
-<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_13"></script>
-<script defer="" src="/assets/js/vendor-teasers.js?v=VIP4_20260213_13"></script>
-<link href="/assets/vendor-teasers.css?v=VIP4_20260213_13" rel="stylesheet"/>
-<link href="/assets/88st-theme.css?v=VIP4_20260213_13" rel="stylesheet"/>
-<link href="/assets/88st-tool-history.css?v=VIP4_20260213_13" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_13"></script>
-<link href="/assets/88st-shell.css?v=VIP4_20260213_13" rel="stylesheet"/>
-<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_13"></script>
+<script src="/assets/js/88st-analytics.js?v=VIP4_20260213_14"></script>
+<script defer="" src="/assets/js/vendor-teasers.js?v=VIP4_20260213_14"></script>
+<link href="/assets/vendor-teasers.css?v=VIP4_20260213_14" rel="stylesheet"/>
+<link href="/assets/88st-theme.css?v=VIP4_20260213_14" rel="stylesheet"/>
+<link href="/assets/88st-tool-history.css?v=VIP4_20260213_14" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-history-hub.js?v=VIP4_20260213_14"></script>
+<link href="/assets/88st-shell.css?v=VIP4_20260213_14" rel="stylesheet"/>
+<script defer="" src="/assets/js/88st-shell.js?v=VIP4_20260213_14"></script>
 </head>
 <body>
 <div class="wrap">
@@ -291,7 +291,7 @@ a{ color:inherit; }
 <div class="nav">
 <a data-utm="1" href="/" onclick="track('landing_nav_home',{landing:'a'})">메인</a>
 <a data-utm="1" href="/analysis/" onclick="track('landing_nav_analyzer',{landing:'a'})">분석기</a>
-<a data-utm="1" href="/#vendorTop" onclick="track('landing_nav_vendor',{landing:'a'})">인증놀이터</a>
+<a data-utm="1" href="/cert/" onclick="track('landing_nav_vendor',{landing:'a'})">인증놀이터</a>
 </div>
 </div>
 <div class="hero">
@@ -304,7 +304,7 @@ a{ color:inherit; }
 <a class="btn primary" data-utm="1" href="/analysis/" onclick="track('landing_cta_click',{landing:'a',cta:'analyzer'})">
            무료 분석기 사용하기
         </a>
-<a class="btn secondary" data-utm="1" href="/#vendorTop" onclick="track('landing_cta_click',{landing:'a',cta:'vendor'})">
+<a class="btn secondary" data-utm="1" href="/cert/" onclick="track('landing_cta_click',{landing:'a',cta:'vendor'})">
            88 인증놀이터 바로보기
         </a>
 </div>
@@ -323,7 +323,7 @@ a{ color:inherit; }
 <div class="vt-sec-title">오늘의 추천 TOP2 (자동 로테이션)</div>
 <div class="vendor-grid" data-vt-grid="rot"></div>
 <div class="vt-actions">
-<a data-cta="vendor_teaser_all" data-utm="1" href="/#vendorTop">전체 혜택/공지 보기</a>
+<a data-cta="vendor_teaser_all" data-utm="1" href="/cert/">전체 혜택/공지 보기</a>
 <a class="primary" data-cta="vendor_teaser_to_analysis" data-utm="1" href="/analysis/">분석기 바로가기</a>
 </div>
 </div>
@@ -356,7 +356,7 @@ a{ color:inherit; }
 <a data-cta="rel_margin" href="/tool-margin/">마진 계산기</a>
 <a data-cta="rel_ev" href="/tool-ev/">EV 계산기</a>
 <a data-cta="rel_odds2" href="/tool-odds/">배당↔확률 변환</a>
-<a data-cta="rel_vendors" href="/#vendorTop">보증·인증 업체</a>
+<a data-cta="rel_vendors" href="/cert/">보증·인증 업체</a>
 <a data-cta="rel_bonus" href="/bonus-checklist/">입플 체크리스트</a>
 <a data-cta="rel_landing_a" href="/landing-a/">입플·보너스 안내</a>
 </div>
